# homelab

./: .env-example  .env.example  .gitignore  .mcp.json  .windsurfrules  AGENTS.md  ARCHITECTURE_REVIEW_AND_ROADMAP.md  AUTHENTIK_FAMILY_ASSISTANT_SETUP.md  AUTHENTIK_FIX_PUBLIC_CLIENT.md  CLAUDE.md  CLAUDE.md.backup.1763210111  CRITICAL_STABILIZATION_REPORT.md  DEPLOYMENT-READY.md  DEPLOY_INGRESS_FIXES_README.md  Dockerfile  FAMILY_ASSISTANT_NETWORK_DIAGNOSIS.md  HTTPS_RESOLUTION_COMPLETE.md  INFRASTRUCTURE_ENHANCEMENTS_REPORT.md  INFRASTRUCTURE_IMPROVEMENTS_REPORT.md  INGRESS_ROUTING_AUDIT_REPORT.md  INGRESS_ROUTING_FIXES_SUMMARY.md  LICENSE  MANUAL-GITOPS-QUICKSTART.md  Makefile  NETWORKING_AUDIT_REPORT.md  NETWORKING_FIXES_SUMMARY.md  NETWORKING_ISSUES_RESOLVED.md  PHASE2_PRODUCTION_DEPLOYMENT.md  README.md  REPOSITORY_STRUCTURE.md  SESSION-NOTES.md  TASKS.md  WEEK1_FOUNDATION_PLAN.md  create-structure.sh  debug-session.sh  dns-fix-guide.md  docker-compose.prod.yml  docker-compose.yml  family-assistant-backend.yaml  fix-ingress-dashboard.yaml  (+9 more)
.gemini/: GEMINI.md
agents/: README.md
applications/: kustomization.yaml
apps/: kustomization.yaml
archive/: README.md
benchmark-results/: BENCHMARK-SUMMARY.md  benchmark_gpt-oss_20b_20251030_092357.txt  benchmark_gpt-oss_20b_20251030_092513.txt
claudedocs/: COMPREHENSIVE_SERVICE_STATUS_REPORT.md  FAMILY_ASSISTANT_TEST_REPORT.md  FINAL-STATUS-2025-11-01.md  FRONTEND_NETWORKING_FIXES.md  NETWORKING_AUDIT_REPORT.md  NETWORKING_FIXES_SUMMARY.md  SECURITY-FILES-MODIFIED.txt  SECURITY-SUMMARY.md  authentik-fix-summary.md  (+17 more)
tools/validator/: pyproject.toml
tools/validator/validator/: __init__.py  feedback_engine.py  service_validator.py  session_parser.py
trash/monitorium/: CONFIGURATION.md  Cargo.toml
(+1059 files in other folders)
