[package]
name = "monitorium"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # For YAML config files
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"  # For home directory detection
